# Guidely.ai

./: .env.example  README.md  app.py  main.py  project_documentation.md  pyproject.toml  requirements.txt
src/agent/: agentic_workflow.py
src/config/: config.yaml  configuration.py
src/exception/: __init__.py
src/logger/: __init__.py
src/prompts/: system_prompt.py
src/tools/: currency_converter_tool.py  expense_calculator_tool.py  place_search_tool.py  weather_info_tool.py
src/utils/: currency_converter.py  expense_calculator.py  models.py  place_search.py  save_to_document.py  weather_info.py
static/css/: styles.css
static/js/: main.js
templates/: about.html  base.html  contact.html  features.html  index.html
